--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "^2.11.0",
+    "@okta/okta-auth-js": "2.11.0",
     "@okta/okta-react": "1.3.0",
     "@okta/okta-signin-widget": "3.5.0",
     "jquery": "3.4.1",
