--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "4.17.15",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-mdl": "^1.11.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2"
   },
