--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-mdl": "1.11.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-tabs": "^3.1.0"
+    "react-tabs": "3.1.0",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
