--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
-  "name": "react",
-  "version": "0.0.0",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "2.11.0",
-    "@okta/okta-react": "1.3.0",
-    "@okta/okta-signin-widget": "3.5.0",
-    "jquery": "3.4.1",
-    "lodash": "4.17.15",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-mdl": "1.11.0",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
-    "react-tabs": "3.1.0",
-    "semantic-ui-react": "^0.88.2"
+    "@okta/okta-auth-js": "^2.11.0",
+    "@okta/okta-react": "^1.3.1",
+    "@testing-library/dom": ">=5",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-mdl": "^2.0.2",
+    "react-router": ">=4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "react-tabs": "^3.1.0",
+    "styled-components": "^4.4.1",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-scripts": "latest"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
