--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "^2.11.0",
-    "@okta/okta-react": "^1.3.1",
-    "@testing-library/dom": ">=5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
-    "react-mdl": "^2.0.2",
-    "react-router": ">=4",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "react-tabs": "^3.1.0",
-    "styled-components": "^4.4.1",
-    "typescript": "^3.2.1"
+    "@okta/okta-auth-js": "2.11.2",
+    "@okta/okta-react": "1.3.1",
+    "@testing-library/dom": "6.11.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.4.0",
+    "@testing-library/user-event": "7.2.1",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-icons": "3.8.0",
+    "react-mdl": "2.0.2",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.3.0",
+    "react-tabs": "3.1.0",
+    "styled-components": "4.4.1",
+    "typescript": "3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
